--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   publish = "public"
-  command = "hugo --minify --gc"
-  
+  command = "hugo --source=/var/www/friendly-froyo-905729.netlify.app/ --config=config-production.toml"
+
 [build.environment]
   HUGO_VERSION = "0.85.0"
   HUGO_BASEURL = "/"
