--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -16,6 +16,9 @@ googleAnalytics = "" # example: UA-123-45, for more info, read the article https
 disableLanguages = ["fr"] # example: ["fr"] for disable french language
 
 [permalinks]
+  [permalinks.term]
+    categories = '/:slug/'
+    tags = '/:slug/'
   page = "/:slug/"
   blog = "/:slug/"
 
