--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   publish = "public"
-  command = "hugo --source=/var/www/friendly-froyo-905729.netlify.app/ --config=config-production.toml"
+  command = "hugo"
 
 [build.environment]
   HUGO_VERSION = "0.85.0"
