--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,5 +1,5 @@
 ######################## default configuration ####################
-baseURL = "https://aicurious.io"
+baseURL = "/"
 title = "AICurious | Let's power your next project with AI"
 theme = "geeky-curious"
 languageName = "En"
@@ -16,10 +16,6 @@ googleAnalytics = "" # example: UA-123-45, for more info, read the article https
 disableLanguages = ["fr"] # example: ["fr"] for disable french language
 
 [permalinks]
-  [permalinks.term]
-    categories = '/:slug/'
-    tags = '/:slug/'
-  [permalinks.page]
     page = "/:slug/"
     blog = "/:slug/"
 ############################# Modules ##############################
