--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -17,6 +17,20 @@ disableLanguages = ["fr"] # example: ["fr"] for disable french language
 uglyURLs = true
 canonifyURLs = true
 
+defaultContentLanguage = 'en'
+defaultContentLanguageInSubdir = true
+[languages]
+  [languages.en]
+    contentDir = 'content/en'
+    languageCode = 'en-US'
+    languageDirection = 'ltr'
+    languageName = 'English'
+    weight = 1
+    [languages.en.permalinks]
+      [languages.en.permalinks.page]
+        blog = '/blog/:slug/'
+      [languages.en.permalinks.section]
+        blog = '/blog/'
 
 [permalinks]
     page = "/:slug/"
