--- a/netlify.toml
+++ b/netlify.toml
@@ -14,3 +14,8 @@
   X-XSS-Protection = "1; mode=block"
   Referrer-Policy = "same-origin"
   Strict-Transport-Security = "max-age=31536000; includeSubDomains; preload"
+
+  [[redirects]]
+  from = "/api/*"
+  to = "https://friendly-froyo-905729.netlify.app/:splat"
+  status = 200
