--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -14,7 +14,6 @@ googleAnalytics = "" # example: UA-123-45, for more info, read the article https
 # disqusShortname = "aicurious" # get your shortname form here : https://disqus.com
 # disable language
 disableLanguages = ["fr"] # example: ["fr"] for disable french language
-uglyURLs = true
 canonifyURLs = true
 
 
@@ -22,6 +21,7 @@ canonifyURLs = true
     page = "/:slug/"
     blog = "/:slug/"
     tags = "/:slug/"
+    categories = "/:slug/"
 ############################# Modules ##############################
 [module]
 [module.hugoVersion]
