--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -17,6 +17,10 @@ disableLanguages = ["fr"] # example: ["fr"] for disable french language
 canonifyURLs = true
 
 
+[taxonomies]
+  tag = "tags"
+  category = "categories"
+  blog = "blogs"
 
 ############################# Modules ##############################
 [module]
